Fix for UAT103- prev and next offer in promo details